// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with form options elevation 0 1`] = `
<div>
  <div
    aria-disabled="false"
    class="MuiButtonBase-root MuiListItem-root makeStyles-root-25 makeStyles-vertical-27 MuiListItem-gutters MuiListItem-divider MuiListItem-button"
    role="button"
    tabindex="0"
  >
    <div
      class="MuiListItemIcon-root"
    >
      <span
        aria-hidden="true"
        class="material-icons MuiIcon-root"
      >
        dynamic_form
      </span>
    </div>
    <div
      class="MuiListItemText-root MuiListItemText-multiline"
    >
      <span
        class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-noWrap MuiTypography-displayBlock"
      >
        title
      </span>
      <span
        class="MuiTypography-root MuiListItemText-secondary MuiTypography-caption MuiTypography-colorTextSecondary MuiTypography-displayBlock"
      >
        description
      </span>
    </div>
    <span
      class="MuiTouchRipple-root"
    />
  </div>
</div>
`;

exports[`renders with form options elevation 0 with layout 1`] = `
<div>
  <div
    aria-disabled="false"
    class="MuiButtonBase-root MuiListItem-root makeStyles-root-31 makeStyles-horizontal-35 MuiListItem-gutters MuiListItem-divider MuiListItem-button"
    role="button"
    tabindex="0"
  >
    <div
      class="MuiListItemIcon-root"
    >
      <span
        aria-hidden="true"
        class="material-icons MuiIcon-root"
      >
        dynamic_form
      </span>
    </div>
    <div
      class="MuiListItemText-root MuiListItemText-multiline"
    >
      <span
        class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-noWrap MuiTypography-displayBlock"
      >
        title
      </span>
      <span
        class="MuiTypography-root MuiListItemText-secondary MuiTypography-caption MuiTypography-colorTextSecondary MuiTypography-displayBlock"
      >
        description
      </span>
    </div>
    <span
      class="MuiTouchRipple-root"
    />
  </div>
</div>
`;

exports[`renders with form options elevation 1 1`] = `
<div>
  <div
    aria-disabled="false"
    class="MuiButtonBase-root MuiListItem-root makeStyles-root-37 makeStyles-vertical-39 MuiListItem-gutters MuiListItem-divider MuiListItem-button"
    role="button"
    tabindex="0"
  >
    <div
      class="MuiListItemIcon-root"
    >
      <span
        aria-hidden="true"
        class="material-icons MuiIcon-root"
      >
        dynamic_form
      </span>
    </div>
    <div
      class="MuiListItemText-root MuiListItemText-multiline"
    >
      <span
        class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-noWrap MuiTypography-displayBlock"
      >
        title
      </span>
      <span
        class="MuiTypography-root MuiListItemText-secondary MuiTypography-caption MuiTypography-colorTextSecondary MuiTypography-displayBlock"
      >
        description
      </span>
    </div>
    <span
      class="MuiTouchRipple-root"
    />
  </div>
</div>
`;

exports[`renders with form options elevation 1 with layout 1`] = `
<div>
  <div
    aria-disabled="false"
    class="MuiButtonBase-root MuiListItem-root makeStyles-root-43 makeStyles-horizontal-47 MuiListItem-gutters MuiListItem-divider MuiListItem-button"
    role="button"
    tabindex="0"
  >
    <div
      class="MuiListItemIcon-root"
    >
      <span
        aria-hidden="true"
        class="material-icons MuiIcon-root"
      >
        dynamic_form
      </span>
    </div>
    <div
      class="MuiListItemText-root MuiListItemText-multiline"
    >
      <span
        class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-noWrap MuiTypography-displayBlock"
      >
        title
      </span>
      <span
        class="MuiTypography-root MuiListItemText-secondary MuiTypography-caption MuiTypography-colorTextSecondary MuiTypography-displayBlock"
      >
        description
      </span>
    </div>
    <span
      class="MuiTouchRipple-root"
    />
  </div>
</div>
`;

exports[`renders with form options elevation undefined 1`] = `
<div>
  <div
    aria-disabled="false"
    class="MuiButtonBase-root MuiListItem-root makeStyles-root-49 makeStyles-vertical-51 MuiListItem-gutters MuiListItem-divider MuiListItem-button"
    role="button"
    tabindex="0"
  >
    <div
      class="MuiListItemIcon-root"
    >
      <span
        aria-hidden="true"
        class="material-icons MuiIcon-root"
      >
        dynamic_form
      </span>
    </div>
    <div
      class="MuiListItemText-root MuiListItemText-multiline"
    >
      <span
        class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-noWrap MuiTypography-displayBlock"
      >
        title
      </span>
      <span
        class="MuiTypography-root MuiListItemText-secondary MuiTypography-caption MuiTypography-colorTextSecondary MuiTypography-displayBlock"
      >
        description
      </span>
    </div>
    <span
      class="MuiTouchRipple-root"
    />
  </div>
</div>
`;

exports[`renders with form options elevation undefined with layout 1`] = `
<div>
  <div
    aria-disabled="false"
    class="MuiButtonBase-root MuiListItem-root makeStyles-root-55 makeStyles-horizontal-59 MuiListItem-gutters MuiListItem-divider MuiListItem-button"
    role="button"
    tabindex="0"
  >
    <div
      class="MuiListItemIcon-root"
    >
      <span
        aria-hidden="true"
        class="material-icons MuiIcon-root"
      >
        dynamic_form
      </span>
    </div>
    <div
      class="MuiListItemText-root MuiListItemText-multiline"
    >
      <span
        class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-noWrap MuiTypography-displayBlock"
      >
        title
      </span>
      <span
        class="MuiTypography-root MuiListItemText-secondary MuiTypography-caption MuiTypography-colorTextSecondary MuiTypography-displayBlock"
      >
        description
      </span>
    </div>
    <span
      class="MuiTouchRipple-root"
    />
  </div>
</div>
`;

exports[`renders with form options icon person 1`] = `
<div>
  <div
    aria-disabled="false"
    class="MuiButtonBase-root MuiListItem-root makeStyles-root-1 makeStyles-vertical-3 MuiListItem-gutters MuiListItem-divider MuiListItem-button"
    role="button"
    tabindex="0"
  >
    <div
      class="MuiListItemIcon-root"
    >
      <span
        aria-hidden="true"
        class="material-icons MuiIcon-root"
      >
        person
      </span>
    </div>
    <div
      class="MuiListItemText-root MuiListItemText-multiline"
    >
      <span
        class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-noWrap MuiTypography-displayBlock"
      >
        title
      </span>
      <span
        class="MuiTypography-root MuiListItemText-secondary MuiTypography-caption MuiTypography-colorTextSecondary MuiTypography-displayBlock"
      >
        description
      </span>
    </div>
    <span
      class="MuiTouchRipple-root"
    />
  </div>
</div>
`;

exports[`renders with form options icon person with layout 1`] = `
<div>
  <div
    aria-disabled="false"
    class="MuiButtonBase-root MuiListItem-root makeStyles-root-7 makeStyles-horizontal-11 MuiListItem-gutters MuiListItem-divider MuiListItem-button"
    role="button"
    tabindex="0"
  >
    <div
      class="MuiListItemIcon-root"
    >
      <span
        aria-hidden="true"
        class="material-icons MuiIcon-root"
      >
        person
      </span>
    </div>
    <div
      class="MuiListItemText-root MuiListItemText-multiline"
    >
      <span
        class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-noWrap MuiTypography-displayBlock"
      >
        title
      </span>
      <span
        class="MuiTypography-root MuiListItemText-secondary MuiTypography-caption MuiTypography-colorTextSecondary MuiTypography-displayBlock"
      >
        description
      </span>
    </div>
    <span
      class="MuiTouchRipple-root"
    />
  </div>
</div>
`;

exports[`renders with form options icon undefined 1`] = `
<div>
  <div
    aria-disabled="false"
    class="MuiButtonBase-root MuiListItem-root makeStyles-root-13 makeStyles-vertical-15 MuiListItem-gutters MuiListItem-divider MuiListItem-button"
    role="button"
    tabindex="0"
  >
    <div
      class="MuiListItemText-root MuiListItemText-multiline"
    >
      <span
        class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-noWrap MuiTypography-displayBlock"
      >
        title
      </span>
      <span
        class="MuiTypography-root MuiListItemText-secondary MuiTypography-caption MuiTypography-colorTextSecondary MuiTypography-displayBlock"
      >
        description
      </span>
    </div>
    <span
      class="MuiTouchRipple-root"
    />
  </div>
</div>
`;

exports[`renders with form options icon undefined with layout 1`] = `
<div>
  <div
    aria-disabled="false"
    class="MuiButtonBase-root MuiListItem-root makeStyles-root-19 makeStyles-horizontal-23 MuiListItem-gutters MuiListItem-divider MuiListItem-button"
    role="button"
    tabindex="0"
  >
    <div
      class="MuiListItemText-root MuiListItemText-multiline"
    >
      <span
        class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-noWrap MuiTypography-displayBlock"
      >
        title
      </span>
      <span
        class="MuiTypography-root MuiListItemText-secondary MuiTypography-caption MuiTypography-colorTextSecondary MuiTypography-displayBlock"
      >
        description
      </span>
    </div>
    <span
      class="MuiTouchRipple-root"
    />
  </div>
</div>
`;
